--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -31,6 +31,8 @@
     <string name="export_keys_dialog_button_export">Export</string>
     <string name="import_export_keys_dialog_password">password</string>
     <string name="import_export_keys_dialog_show">Show password</string>
+    <string name="import_text">Import</string>
+    <string name="sweep_text">Sweep</string>
     <string name="export_keys_dialog_success">Your wallet has been saved to\n\n%s\n\nKeep it safe, and keep your password safe!\n\nDo you want to archive your wallet using an app?</string>
     <string name="export_keys_dialog_failure">Your private keys could not be exported:\n%s</string>
     <string name="toast_downloading_wallet">Downloading wallet.</string>
@@ -44,20 +46,23 @@
 		fully decrypt your bitcoin wallet. Please enter your second password
 		below.</string>
     <string name="main_password_text">Please enter your main password below.</string>
+    <string name="private_key_password_text">Encrypted private key detected. Please enter the password below.</string>
     <string name="wallet_identifier_title">Wallet Identifier</string>
     <string name="wallet_identifier_enter_text">Please enter your 36 character wallet identifier below including dashes. Two factor authentication must be temporarily disabled.</string>
     <string name="new_account_password_length_error">Password must be between 11 and 255 characters</string>
     <string name="new_account_password_mismatch_error">Passwords do not match</string>
+    <string name="new_account_password_invalid_email">Invalid Email Address</string>
     <string name="new_account_kaptcha_error">Captcha code incorrect</string>
     <string name="new_account_no_kaptcha_error">You must enter a captcha code</string>
     <string name="new_account_success">New account successfully created</string>
     <string name="dialog_continue">Continue</string>
     <string name="second_password_title">Second Password</string>
     <string name="main_password_title">Main Password</string>
+    <string name="private_key_password_title">Private Key Password</string>
     <string name="password_incorrect">Incorrect Password</string>
     <string name="generate_key_no_password_error">Cannot generate key without a second password</string>
     <string name="send_no_password_error">Cannot send transaction without a second password</string>
-    <string name="ask_for_fee">This transaction is low priority it is recommended you include a 0.005 BTC miners fee. Would you like to add this fee now?</string>
+    <string name="ask_for_fee">This transaction is low priority it is recommended you include a miners fee. Would you like to add this fee now?</string>
     <string name="ask_for_private_key">This transaction requires the private key for Bitcoin address %s. Would you like to scan it from a paper wallet?</string>
     <string name="continue_without_fee">Continue Without Fee</string>
     <string name="add_fee">Add Fee</string>
@@ -67,6 +72,8 @@
     <string name="password">Password:</string>
     <string name="password_confirm">Confirm Password:</string>
     <string name="captcha">Captcha:</string>
+    <string name="email">Email:</string>
+    <string name="optional">Optional</string>
     <string name="captcha_code">Please type the captcha code</string>
     <string name="create_account">Create Account</string>
     <string name="creating_account">Creating new account. Please Wait</string>
@@ -291,12 +298,12 @@
     <string name="no_transactions">No Transactions</string>
     <string name="unknown_error">Unknown Error</string>
     <string name="watch_only">(Watch Only)</string>
-	<string name="rng_announcement_description">A vulnerability has been found in the random number generator used in previous versions of the Blockchain android app. \n\n It is highly recommended that all coins be moved to new bitcoin addresses. This can be done automatically but will invalidate any existing wallet backups. Would you like to begin this process now?</string>
-	<string name="security_announcement">Important Security Announcement</string>
-	<string name="error_rekeying_wallet">An Error Occurred During the Re-keying process</string>
-	<string name="success_rekeying_wallet">Your wallet was successfully Re-keyed. Please make a new backup.</string>
-	<string name="rekeying_wallet_balance_too_small">Your wallet balance is too low to sweep.</string>
-	
+    <string name="rng_announcement_description">A vulnerability has been found in the random number generator used in previous versions of the Blockchain android app. \n\n It is highly recommended that all coins be moved to new bitcoin addresses. This can be done automatically but will invalidate any existing wallet backups. Would you like to begin this process now?</string>
+    <string name="security_announcement">Important Security Announcement</string>
+    <string name="error_rekeying_wallet">An Error Occurred During the Re-keying process</string>
+    <string name="success_rekeying_wallet">Your wallet was successfully Re-keyed. Please make a new backup.</string>
+    <string name="rekeying_wallet_balance_too_small">Your wallet balance is too low to sweep.</string>
+
     <string-array name="send_types_array">
         <item>Quick Send</item>
         <item>Custom Send</item>
